--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google/generative-ai": "^0.14.0",
     "@nerimity/nerimity.js": "^1.4.0",
     "@prisma/client": "^5.16.0"
   },
