--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "description": "",
   "dependencies": {
     "@nerimity/nerimity.js": "^1.5.0",
-    "@prisma/client": "^5.16.0"
+    "@prisma/client": "^5.16.0",
+    "groq-sdk": "^0.7.0"
   },
   "devDependencies": {
     "prisma": "^5.16.0"
