refactored code + add wordle

--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@nerimity/nerimity.js": "^1.5.0",
+    "@nerimity/nerimity.js": "^1.5.1",
     "@prisma/client": "^5.16.0",
+    "@types/node": "^22.5.5",
     "groq-sdk": "^0.7.0"
   },
   "devDependencies": {
